tests/macro-tests/cases/widget/type_path_is_invalid1.stderr
error[E0433]: cannot find `not` in `$crate`
 --> cases/widget/type_path_is_invalid1.rs:3:18
  |
3 | #[widget($crate::not::a::valid::path)]
  |                  ^^^            ---- in this macro invocation
  |                  |
  |                  could not find `not` in the crate root
  |
  = note: this error originates in the macro `zzz_widget_path__not_a_valid_path` (in Nightly builds, run with -Z macro-backtrace for more info)
