tests/macro-tests/cases/widget/type_path_is_invalid1.rs
use zng::prelude_wgt::{WidgetBase, widget};

#[widget($crate::not::a::valid::path)]
pub struct TextWidget(WidgetBase);

fn main() {}
